# NewsAgent

./: .env.example  .gitignore  README.md  RSSHUB_SOURCES.md  config.yaml  config.yaml.example  docker-compose.yml  news-agent.spec  pyproject.toml
.omo/drafts/: news-agent.md
.omo/plans/: news-agent.md
.omo/run-continuation/: ses_0afc5596dffeoOFp71lQXckhbv.json
scripts/: start-rsshub.ps1  stop-rsshub.ps1
scripts/data/: state.db
src/news_agent/: __init__.py  api_key.py  autostart.py  chat_bridge.py  config.py  conversation.py  curator.py  db.py  installer.py  llm.py  logging_setup.py  main.py  scheduler.py  shortcuts.py  tray.py  uninstaller.py  viewer.py  worker.py
src/news_agent/agent/: __init__.py  config.py  conversation.py  mcp_config.py  mcp_config.yaml.example
src/news_agent/agent/skills/: README.md  __init__.py  news_summarizer.md
src/news_agent/fetchers/: __init__.py  bangumi.py  bilibili_hot.py  fortune.py  github_trending.py  html_src.py  mediawiki.py  rss.py  rsshub.py  weather.py
src/news_agent/templates/: daily.css  daily.html
src/news_agent/tests/: __init__.py  conftest.py  test_agent_extensions.py  test_api_key.py  test_autostart.py  test_config.py  test_conversation.py  test_curator.py  test_db.py  test_fetchers_bangumi.py  test_fetchers_bilibili_hot.py  test_fetchers_fortune.py  test_fetchers_github_trending.py  test_fetchers_html.py  test_fetchers_rss.py  test_fetchers_rsshub.py  test_fetchers_weather.py  test_llm.py  test_logging_setup.py  test_scheduler.py  test_shortcuts.py  test_uninstaller.py
