[project]
name = "news-agent"
version = "0.1.0"
description = "Windows daily-news-agent desktop app — tray + pywebview UI, SQLite dual-process, DeepSeek LLM"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "News Agent Team" },
]
dependencies = [
    "pywebview>=5.4",
    "pystray>=0.19.5",
    "Pillow>=11.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "openai>=1.50",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "lunardate>=0.2.0",
    "keyring>=25.0",
    "python-dotenv>=1.0",
    "tenacity>=8.5",
    "pynput>=1.7",
]

[project.scripts]
news-agent = "news_agent.main:main"
news-agent-worker = "news_agent.worker:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["news_agent"]

[tool.pytest.ini_options]
testpaths = ["src/news_agent/tests"]
asyncio_mode = "auto"
